# libmacro

./: .atom-build.json  .clang-format  .dir-locals.el  CMakeLists.txt  LICENSE  Makefile  README.md  SMK  SMK.cf  libmacro-benchmark.cc  libmacro-test-func-like.cc  libmacro-test-obj-like.cc  libmacro.cc  libmacro.hh  tokenize.hh
cmake/Modules/: FindGOOGLE_BENCHMARK.cmake  FindGOOGLE_TEST.cmake
